@startuml
skinparam packageStyle rectangle
skinparam shadowing false

package "it.unipd.importer" {

    class ImporterApplication
    class ElasticsearchClient_Importer
}

package "it.unipd.importer.api" {

    class ImporterController
}

package "it.unipd.importer.service" {

    class ImporterService
}

package "it.unipd.importer.config" {

    class ElasticConfig
}

package "External Libraries" {

    class ElasticsearchClient
    class RestClient
}

' --- Dependencies ---

ImporterApplication ..> ElasticConfig : enables properties
ImporterApplication ..> ImporterController : component scan

ImporterController --> ImporterService : uses
ImporterService --> ElasticsearchClient_Importer : delegates indexing

ElasticConfig --> ElasticsearchClient : creates bean
ElasticConfig --> RestClient : creates bean

ElasticsearchClient_Importer --> ElasticsearchClient : uses
ElasticsearchClient_Importer --> RestClient : manages lifecycle

@enduml

